# CMake_Template

./: CMakeLists.txt  README.md
.cache/clangd/index/: add.cpp.6DAC8A0706364942.idx  add.cpp.CA9B20F1EE1EC664.idx  add.cpp.FE14D43032868D02.idx  add.h.5DC7019A22976941.idx  add.h.732DD4997A9F89A1.idx  main.cpp.5C30683D51B83251.idx  sub.cpp.0216DCD3AC402B0C.idx  sub.cpp.03F0A1B2B52AA9D3.idx  sub.cpp.3D65A987332AD904.idx  sub.h.8CBD463698041797.idx  sub.h.CB32AB3D248E46A0.idx
cmake/: FindDependencies.cmake  ProjectSettings.cmake
core/: CMakeLists.txt
core/add/: CMakeLists.txt
core/add/include/: add.h
core/add/src/: add.cpp
core/add/test/: CMakeLists.txt
core/sub/: CMakeLists.txt
core/sub/include/: sub.h
core/sub/src/: sub.cpp
libs/: CMakeLists.txt
libs/lib_add/: CMakeLists.txt
libs/lib_add/include/: add.h
libs/noncopyable/: CMakeLists.txt
modules/: CMakeLists.txt
modules/modules1/: CMakeLists.txt
modules/modules1/test/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
